inclução de paginas de navegação, organização do diretorio, inclução de melhorias e responsividade.

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- JavaScript -->
-    <script src="javascript/interacao.js" defer></script>
+    <script src="../src/frontend/javascript/interacao.js" defer></script>
     <!-- TypeScript -->
     <script src="../dist/script.js" defer></script>
     <!-- CSS3 -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../src/frontend/css/style.css">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Favicons -->
@@ -27,7 +27,7 @@
             <section class="logotipo">
                 <span class="logo">
                     <span>
-                        <img src="./assets/img/logotipo-blur.png" alt="Logo do Casamento">
+                        <img src="../src/frontend/assets/imgs/logotipo-blur.png" alt="Logo do Casamento">
                     </span>
                 </span>
                 <span class="open-menu"></span>
@@ -58,22 +58,22 @@
             <section class="box-home">
                 <ul class="box-imgs">
                     <li class="img-home">
-                        <img class="img" src="./assets/img/img1.png" alt="Foto dos noivos">
+                        <img class="img" src="../public/assets/img/img1.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
                         <div class="img-circle"></div>
                     </li>
                     <li class="img-home">
-                        <img class="img" src="./assets/img/img2.png" alt="Foto dos noivos">
+                        <img class="img" src="../public/assets/img/img2.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
                         <div class="img-circle"></div>
                     </li>
                     <li class="img-home">
-                        <img class="img" src="./assets/img/img3.png" alt="Foto dos noivos">
+                        <img class="img" src="../public/assets/img/img3.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
-                        <img class="img" src="./assets/img/img1.png" alt="Foto dos noivos">
+                        <img class="img" src="../public/assets/img/img1.png" alt="Foto dos noivos">
                     </li>
                 </ul>
             </section>
@@ -135,16 +135,16 @@
         <section id="preferencias">
             <ul class="box-pref">
                 <li class="img-pref">
-                    <img class="img" src="./assets/img/img1.png" alt="">
+                    <img class="img" src="../public/assets/img/img1.png" alt="">
                 </li>
                 <li class="img-pref">
                     <div class="img-circle"></div>
                 </li>
                 <li class="img-pref">
-                    <img class="img" src="./assets/img/img2.png" alt="">
+                    <img class="img" src="../public/assets/img/img2.png" alt="">
                 </li>
                 <li class="img-pref">
-                    <img class="img" src="./assets/img/img3.png" alt="">
+                    <img class="img" src="../public/assets/img/img3.png" alt="">
                 </li>
             </ul>
             <section class="pref">
@@ -172,7 +172,7 @@
             <section class="box-padrinho">
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="./assets/img/img1.png" alt="Planejamento">
+                        <img src="../public/assets/img/img1.png" alt="Planejamento">
                     </span>
                     <h3 class="title">Padrinhos</h3>
                     <p class="text">
@@ -183,7 +183,7 @@
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="./assets/img/img2.png" alt="Festa de casamento">
+                        <img src="../public/assets/img/img2.png" alt="Festa de casamento">
                     </span>
                     <h3 class="title">Pajem</h3>
                     <p class="text">
@@ -193,7 +193,7 @@
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="./assets/img/img3.png" alt="Fotografia">
+                        <img src="../public/assets/img/img3.png" alt="Fotografia">
                     </span>
                     <h3 class="title">Daminha</h3>
                     <p class="text">
@@ -206,19 +206,19 @@
         <section id="festa">
             <ul class="box-festa">
                 <li class="imgs-festa">
-                    <img src="./assets/img/img1.png" alt="">
+                    <img src="../public/assets/img/img1.png" alt="">
                 </li>
                 <li class="imgs-festa">
-                    <div class="./assets/img-circle"></div>
+                    <div class="../public/assets/img-circle"></div>
                 </li>
                 <li class="imgs-festa">
-                    <div class="./assets/img-circle"></div>
+                    <div class="../public/assets/img-circle"></div>
                 </li>
                 <li class="imgs-festa">
-                    <img src="./assets/img/img2.png" alt="">
+                    <img src="../public/assets/img/img2.png" alt="">
                 </li>
                 <li class="imgs-festa">
-                    <img src="./assets/img/img3.png" alt="">
+                    <img src="../public/assets/img/img3.png" alt="">
                 </li>
             </ul>
             <span class="descricao-festa">
@@ -234,10 +234,10 @@
         <section id="agradecimentos">
             <section class="box-agradecimento">
                 <span class="img-agradecimento">
-                    <img src="./assets/img/img4.png" alt="">
+                    <img src="../public/assets/img/img4.png" alt="">
                 </span>
                 <span class="img-agradecimento">
-                    <img src="./assets/img/img5.png" alt="">
+                    <img src="../public/assets/img/img5.png" alt="">
                 </span>
                 <span class="descricao-agradecimento">
                     <h2 class="title">Seja inspirado para o seu casamento!</h2>
@@ -255,7 +255,7 @@
                     <div class="img-circle"></div>
                 </span>
                 <span class="ajuda-img">
-                    <img src="./assets/img/img1.png" alt="Foto do casal">
+                    <img src="../public/assets/img/img1.png" alt="Foto do casal">
                 </span>
                 <section class="descricao-ajuda">
                     <h2 class="title">Ajude a pagar uma despeza dos noivos</h2>
@@ -275,13 +275,13 @@
                 </section>
                 <ul class="imgs-ajuda">
                     <li class="img-ajuda">
-                        <div class="./assets/img-circle"></div>
+                        <div class="../public/assets/img-circle"></div>
                     </li>
                     <li class="img-ajuda">
-                        <img src="./assets/img/img2.png" alt="Foto do casal">
+                        <img src="../public/assets/img/img2.png" alt="Foto do casal">
                     </li>
                     <li class="img-ajuda">
-                        <img src="./assets/img/img3.png" alt="Foto do casal">
+                        <img src="../public/assets/img/img3.png" alt="Foto do casal">
                     </li>
                 </ul>
             </section>
@@ -293,7 +293,7 @@
                         <div class="img-circle"></div>
                     </li>
                     <li class="img-contact">
-                        <img src="./assets/img/img1.png" alt="">
+                        <img src="../public/assets/img/img1.png" alt="">
                     </li>
                     <li class="img-contact">
                         <div class="img-circle"></div>
@@ -340,7 +340,7 @@
                         </span>
                     </section>
                     <span class="logo-foot">
-                        <img src="./assets/img/logotipo-blur.png" alt="Logotipo...">
+                        <img src="../src/frontend/assets/imgs/logotipo-blur.png" alt="Logotipo...">
                     </span>
                 </section>
             </section>
