--- a/public/login-register.html
+++ b/public/login-register.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página de Login e Cadastro para o nosso casamento. Junte-se a nós nessa celebração!">
-    <meta name="author" content="Seu Nome">
-    <title>Casamento - Login / Cadastro</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="author" content="Jadson">
+    <link rel="stylesheet" href="../src/frontend/css/login-register.css">
+    <script src="../src/frontend/javascript/login-register.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <title>Login / Cadastro</title>
 </head>
 <body>
     <main class="container">
@@ -65,11 +66,8 @@
             </form>
         </section>
     </main>
-
     <footer>
         <p>© 2024 O Casamento de [Nome dos noivos]. Todos os direitos reservados.</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
