--- a/public/404.html
+++ b/public/404.html
@@ -5,82 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Página não encontrada | Casamento</title>
-    
-    <style>
-        /* Estilos Gerais */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f1f1f1;
-            color: #333;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-        }
-
-        /* Container principal */
-        .container {
-            background-color: #fff;
-            border-radius: 8px;
-            padding: 40px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 80%;
-            max-width: 600px;
-        }
-
-        /* Estilo do título */
-        h1 {
-            font-size: 4rem;
-            color: #e74c3c;
-            margin-bottom: 20px;
-        }
-
-        /* Estilo da mensagem */
-        p {
-            font-size: 1.5rem;
-            margin: 20px 0;
-        }
-
-        /* Estilo do botão */
-        .btn {
-            background-color: #e74c3c;
-            color: #fff;
-            font-size: 1.2rem;
-            padding: 12px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .btn:hover {
-            background-color: #c0392b;
-        }
-
-        /* Estilo da imagem */
-        .image {
-            width: 100px;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="../src/frontend/css/404.css">
+    <title>Página não encontrada</title>
 </head>
 
 <body>
-
-    <main class="container">
-        <figure>
-            <img src="https://example.com/casamento-logo.png" alt="Nosso Casamento" class="image">
-        </figure>
-        
-        <section>
-            <h1>Ops! Página não encontrada</h1>
-            <p>Infelizmente, a página que você está procurando não existe ou foi movida. Mas não se preocupe, o nosso casamento está a todo vapor!</p>
-            <a href="/" class="btn">Voltar para a página inicial</a>
+    <main>
+        <section class="container">
+            <figure>
+                <img src="../src/frontend/assets/imgs/logotipo-blur.png" alt="Nosso Casamento" class="image">
+            </figure>
+            <section>
+                <h1>Ops! Página não encontrada</h1>
+                <p>Infelizmente, a página que você está procurando não existe ou foi movida. Mas não se preocupe, o
+                    nosso casamento está a todo vapor!</p>
+                <a href="index.html" class="btn">Voltar para a página inicial</a>
+            </section>
         </section>
     </main>
-
 </body>
-
 </html>
