Atualização de responsividade para tablet.

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
                             <li class="nav-link"><a href="#contact">Contato</a></li>
                         </ul>
                         <ul class="box-registe">
-                            <li class="login"><a href="" class="bi bi-box-arrow-in-right"> Entrar</a></li>
-                            <li class="registe"><a href="" class="bi bi-person-circle"> Cadastra-se</a></li>
+                            <li class="login"><a href="#" class="bi bi-box-arrow-in-right"> Entrar</a></li>
+                            <li class="registe"><a href="#" class="bi bi-person-circle"> Cadastra-se</a></li>
                         </ul>
                     </nav>
                 </section>
